--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   supabase_flutter: ^2.8.4
   flutter_native_splash: ^2.4.5
   cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
   
 
 dev_dependencies:
