--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_native_splash: ^2.4.5
   cached_network_image: ^3.4.1
   image_picker: ^1.1.2
+  provider: ^6.1.4
   
 
 dev_dependencies:
