--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   cached_network_image: ^3.4.1
   image_picker: ^1.1.2
   provider: ^6.1.4
-  
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +76,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/products/rollingPapers/
+    - .env
+    # - assets/products/rollingPapers/
     - assets/icons/splash_logo.png
     # - images/a_dot_ham.jpeg
   
