--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   provider: ^6.1.4
   flutter_dotenv: ^5.1.0
+  flutter_masked_text2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
@@ -77,9 +78,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-    # - assets/products/rollingPapers/
     - assets/icons/splash_logo.png
-    # - images/a_dot_ham.jpeg
+  
   
   
   
