--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 API_URL=https://rua11storecatalogapi-production.up.railway.app/
+API_URL_LOCAL=http://localhost:5000
+
+#Mercado Pago 
+MP_PUBLIC_KEY=TEST-44ff80a1-d074-4fd5-a27b-1f6fdecfe457
