--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.1.4
   flutter_dotenv: ^5.1.0
   flutter_masked_text2: ^0.9.1
+  flutter_spinbox: ^0.13.1
 
 dev_dependencies:
   flutter_test:
