--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ API_URL_LOCAL=http://localhost:5000
 
 #Mercado Pago 
 MP_PUBLIC_KEY=TEST-44ff80a1-d074-4fd5-a27b-1f6fdecfe457
+
+
+#Employee 
+PHONE_NUMBER=+556191865680
