--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL=https://rua11storecatalogapi-production.up.railway.app/
+API_URL=https://rua11store-catalog-api.onrender.com/
 API_URL_LOCAL=http://localhost:5000
 
 #Mercado Pago 
