--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 API_URL=https://rua11store-catalog-api-lbp7.onrender.com/
-API_URL_LOCAL=http://localhost:5000
+API_URL_LOCAL=http://localhost:5000/
 
 #Mercado Pago 
 MP_PUBLIC_KEY=TEST-44ff80a1-d074-4fd5-a27b-1f6fdecfe457
