--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_masked_text2: ^0.9.1
   flutter_spinbox: ^0.13.1
   font_awesome_flutter: ^10.8.0
+  carousel_slider_x: ^6.0.7
 
 dev_dependencies:
   flutter_test:
