--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/home/rafael/flutter
-FLUTTER_APPLICATION_PATH=/home/rafael/Documentos/rua11store_catalog_app
+FLUTTER_ROOT=C:\Users\Rafae\Documents\Flutter\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\Rafae\Desktop\Rua11Store\rua11store_catalog_app
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
