--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/rafael/Android/Sdk
-flutter.sdk=/home/rafael/flutter
+sdk.dir=C:\\Users\\Rafae\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\Rafae\\Documents\\Flutter\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
