--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter_native_splash:
-    color: "#6600ff"  # Cor de fundo
+    color: "#6300FF"  # Cor de fundo
     image: assets/icons/splash_logo.png  # Caminho para sua imagem
     android: true
     ios: true
