--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   carousel_slider_x: ^6.0.7
   timeago: ^3.6.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +60,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: 0.14.4
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/logo/logo.png"
 
 flutter_native_splash:
     color: "#6300FF"  # Cor de fundo
@@ -83,6 +90,7 @@ flutter:
   assets:
     - .env
     - assets/icons/splash_logo.png
+    - assets/icons/logo/logo.png
   
   
   
