--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.2.1
   intl: ^0.20.2
   supabase_flutter: ^2.8.4
+  firebase_core: ^4.1.0
+  firebase_messaging: ^16.0.1
   flutter_native_splash: ^2.4.5
   cached_network_image: ^3.4.1
   image_picker: ^1.1.2
